--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{   "author": {
+{
+    "author": {
         "name": "Nwakwoke Nnaemeka Patrick",
         "email": "patricknwak@gmail.com"
     },
@@ -12,7 +13,6 @@
         "@babel/core": "^7.1.0",
         "@babel/preset-env": "^7.1.0",
         "@babel/preset-react": "^7.0.0",
-        "axios": "^0.18",
         "babel-loader": "^8.0.2",
         "css-loader": "^1.0.0",
         "file-loader": "^3.0.1",
@@ -21,7 +21,7 @@
         "style-loader": "^0.23.0",
         "webpack": "^4.19.1",
         "webpack-cli": "^3.1.1",
-        "webpack-dev-server": "^3.1.8"
+        "webpack-dev-server": "^3.3.1"
     },
     "dependencies": {
         "react": "^16.8.4",
